2004-05-08  Matti Aarnio  <mea@zmailer.org>

	* include/shmmib.h, scheduler/scheduler.c,
	  transports/mailbox/mailbox.c, transports/smtp/smtp.c,
	  transports/expirer/expirer.c, transports/errormail/errormail.c,
	  transports/hold/hold.c, transports/sm/sm.c,
	  transports/reroute/reroute.c:
	    Changed SHMMIB area variables all to be of "volatile" kind.

	* smtpserver/smtpcmds.c, 
	    Changed report output a bit, don't give router output
	    directly to type() as a format string.

	* smtpserver/smtpserver.c:
	    Implement  zsleep()  by means of calling select(2).

	* smtpserver/subdaemon-rtr.c, smtpserver/subdaemons.c:
	    Reworked subprocess error (EOF) processing a bit.
	    Perhaps now dying router will automagically recover
	    loosing only the session currently underway.

2004-05-07  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  smtpserver/cfgread.c, smtpserver/subdaemons.c,
	  man/smtpserver.8.in, proto/smtpserver.conf.in:
	    Change the tarpit parameters to be of 'double'
	    type, instead of 'int'.  Allows slower growth
	    of the exponent value..  Also do sleep()s
	    with  select().  Also tuneup of tarpit calls.
	    They are not used in all rejects...

	* smtpserver/kissig/*:
	    Removed old code predating present policy material.

2004-05-04  Matti Aarnio  <mea@zmailer.org>

	* router/functions.c:
	    In  rfc822syntax  do report errors to stderr ONLY
	    if the system is tty interactive!

2004-05-02  Matti Aarnio  <mea@zmailer.org>

	* proto/smtpserver.conf.in, smtpserver/cfgread.c,
	  smtpserver/policytest.c, smtpserver/policytest.h,
	  smtpserver/smtpauth.c, smtpserver/smtpserver.h,
	  smtpserver/subdaemon-trk.c:
	    - Track the number of FAILED SMTP AUTHs, and refuse
	      to do any if there are too many failures from given
	      IP address.  This is, of course, somewhat troublesome
	      under some conditions -- one user can cause DoS for